--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "private": true,
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon",
     "serve": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
